fixed project title font size on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -834,6 +834,10 @@ textarea {
         width: 100%;
         height: 80%;
     }
+    .project-title
+    {
+        font-size: 1.2rem;
+    }
 
     #skills-section
     {
